--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
 		stage("threat modeling") {
 			agent {
 				docker {
-					image "rusakovichma/tic-taac:1.1.3"
+					image "rusakovichma/tic-taac:1.1.4"
 					args '''\
 						--user 0 \
 						--volume ${WORKSPACE}/threat-model:/threat-model:ro \
@@ -19,13 +19,13 @@ pipeline {
 				 script {
 					 def result = sh label: "tic-taac", returnStatus: true,
 						 script: """\
-							mkdir -p reports &>/dev/null
+							mkdir -p report &>/dev/null
 							/usr/share/tic-taac/bin/tic-taac.sh \
 							--failOnThreatRisk High \
-							--threatModel "${WORKSPACE}/threat-model/threat-model.yml" \
-							--mitigations "${WORKSPACE}/threat-model/whitelisting.yml" \
+							--threatModel /threat-model/threat-model.yml \
+							--mitigations /threat-model/whitelisting.yml \
 							--outFormat html \
-							--out "${WORKSPACE}/report"
+							--out /report
 						 """
 					 if (result > 0) {
 						  unstable(message: "Unmitigated Threats found")
